# API_Project_check

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-test.txt  requirements.txt  run_tests.sh  setup.py
go-rest-api/: go.mod  main.go
src/api/: client.py  main.py  objects_api.py
src/api/core/: __init__.py  database.py  router.py  security.py
src/models/: __init__.py  base.py  user.py
src/utils/: config.py
tests/: conftest.py  test_api.py  test_objects_api.py  utils.py
tests/integration/: test_objects_api.py
tests/integration/restful_api/: conftest.py  test_objects.py
tests/test_data/: test_objects.json
tests/utils/: test_data.py
